# pingvin

./: .dockerignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  environment.yml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pingvin-ci.yml
apps/: CMakeLists.txt
apps/emperor/: CMakeLists.txt  main.cc
apps/emperor/gadgets/: Gadget.h  NoiseAdjustGadget.h  RemoveOversampling.h
apps/emperor/pipelines/: cartesian_grappa.h  cartesian_spirit.h  cmr.h  default.h  epi.h  file_search.h  grappa.h  grappa_cpu.h  noise.h  pipeline.h
apps/pingvin/: CMakeLists.txt  StreamConsumer.h  main.cc  main.cpp  pipeline_registry.h  system_info.cpp  system_info.h
apps/pingvin/nodes/: NodeProcessable.h  Parallel.cpp  Parallel.h  ParallelProcess.cpp  ParallelProcess.h  ParallelStream.cpp  ParallelStream.h  Processable.cpp  Processable.h  PureStream.cpp  PureStream.h  Stream.cpp  Stream.h
apps/pingvin/pipelines/: cartesian_grappa.h  cartesian_spirit.h  cmr.h  default.h  denoise.h  epi.h  file_search.h  grappa.h  grappa_epi.h  noise.h  parallel_bypass.h  pipeline.h  registry.h  streams.h
apps/pingvin/pipelines/config/: cartesian-grappa.conf  cmr-rtcine-lax-ai.conf  epi.conf  grappa-epi.conf  stream-cartesian-grappa.conf
apps/pingvin/pipelines/mri/: cartesian_grappa.h  cartesian_spirit.h  cmr.h  default.h  denoise.h  epi.h  grappa.h  grappa_epi.h  noise.h  parallel_bypass.h  streams.h
apps/pingvin/pipelines/mri/config/: cartesian-cine-denoise.conf  cartesian-grappa-snr.conf  cartesian-grappa-t2w.conf  cartesian-nonlinear-spirit-realtimecine.conf  cartesian-randomsampling-nonlinear-spirit-realtimecine.conf  cartesian-spirit.conf  cmr-cine-binning.conf  cmr-mapping-t1-sr.conf  cmr-rtcine-lax-ai.conf  epi.conf
cmake/: CMakeLists.txt
conda/: build-environment.yml  build.sh  meta.yaml  package.sh  run_test.sh
core/: CMakeLists.txt  Context.h  MultiprocessStream.cpp  MultiprocessStream.h  Node.h  ParallelStream.cpp  ParallelStream.h  Parameters.h  Pipeline.h  PropertyMixin.h  PureGadget.h  PureStream.h  Sink.h  Source.h  Stream.cpp  Stream.h  ThreadPool.h  pingvin_config.in  system_info.cpp  system_info.h
core/parallel/: Branch.h  CMakeLists.txt  Fanout.h  Fanout.hpp  Merge.h  UnorderedMerge.cpp  UnorderedMerge.h
doc/source/: conf.py  gadget.rst  using.md
gadgets/: CMakeLists.txt
gadgets/T1/: CMakeLists.txt
gadgets/T1/config/: MOLLI_T1_Moco.xml
gadgets/bart/: BART_Recon.xml  BART_Recon_cloud.xml  BART_Recon_cloud_Standard.xml  CMakeLists.txt
gadgets/cartesian/: CMakeLists.txt
gadgets/cmr/: CMakeLists.txt  CmrCartesianKSpaceBinningCineGadget.cpp  CmrCartesianKSpaceBinningCineGadget.h  CmrParametricMappingGadget.cpp  CmrParametricMappingGadget.h  CmrParametricT1SRMappingGadget.cpp  CmrParametricT1SRMappingGadget.h  CmrParametricT2MappingGadget.cpp  CmrParametricT2MappingGadget.h  CmrRealTimeLAXCineAIAnalysisGadget.cpp  CmrRealTimeLAXCineAIAnalysisGadget.h  PureCmrCartesianKSpaceBinningCineGadget.cpp  PureCmrCartesianKSpaceBinningCineGadget.h
gadgets/cmr/config/BinningCine/: CMR_2DT_RTCine_KspaceBinning_Cloud.xml  CMR_2DT_RTCine_KspaceBinning_MultiSeries_Cloud.xml
gadgets/cmr/config/LandmarkDetection/: gadgetron_cmr_landmark_detection_util.py
gadgets/debugging/: CMakeLists.txt  PseudoReplicatorGadget.cpp  PseudoReplicatorGadget.h  RateLimitGadget.cpp  RateLimitGadget.h  WhiteNoiseInjectorGadget.cpp  WhiteNoiseInjectorGadget.h
gadgets/dicom/: CMakeLists.txt  dicom.xml
gadgets/epi/: CMakeLists.txt  CutXGadget.cpp  CutXGadget.h  EPICorrGadget.cpp  EPICorrGadget.h  EPIPackNavigatorGadget.cpp  EPIPackNavigatorGadget.h  EPIReconXGadget.cpp  EPIReconXGadget.h  FFTXGadget.cpp  FFTXGadget.h  OneEncodingGadget.cpp  OneEncodingGadget.h
gadgets/examples/: AcquisitionWaveformBranch.cpp  AcquisitionWaveformBranch.h  CMakeLists.txt  ImageInverter.cpp  ImageInverter.h  ImageLayerer.cpp  ImageLayerer.h
gadgets/examples/config/: external_equivalent_example.xml  external_example.xml  external_matlab_bucket_example.xml  external_matlab_buffer_example.xml  external_matlab_tiny_example.xml  external_python_bucket_example.xml  external_python_buffer_example.xml
gadgets/fatwater/: CMakeLists.txt
gadgets/fatwater/config/: Generic_Cartesian_Grappa_FatWater.xml
gadgets/gpu/: CMakeLists.txt
gadgets/grappa/: AcquisitionFanout.h  CMakeLists.txt  ImageAccumulator.cpp  ImageAccumulator.h  SliceAccumulator.cpp  SliceAccumulator.h  Unmixing.cpp  Unmixing.h  WeightsCalculator.cpp  WeightsCalculator.h  grappa_cpu.ini
gadgets/hyper/: CMRT.xml  CMRT3D.xml  CMakeLists.txt  FS-CSI.xml  NFFT2D.xml
gadgets/interventional_mri/: CMakeLists.txt  DeviceChannelSplitterGadget.cpp  DeviceChannelSplitterGadget.h
gadgets/moco/: CMakeLists.txt
gadgets/moco/config/: CMakeLists.txt  cpureg_cartesian_averaging.xml  gpureg_cartesian_averaging.xml
gadgets/mri_core/: AccumulatorGadget.cpp  AccumulatorGadget.h  AcquisitionAccumulateTriggerGadget.cpp  AcquisitionAccumulateTriggerGadget.h  AsymmetricEchoAdjustROGadget.cpp  AsymmetricEchoAdjustROGadget.h  AugmentImageMetadataGadget.cpp  AugmentImageMetadataGadget.h  AutoScaleGadget.cpp  AutoScaleGadget.h  BucketToBufferGadget.cpp  BucketToBufferGadget.h  CMakeLists.txt  CoilReductionGadget.cpp  CoilReductionGadget.h  CombineGadget.cpp  CombineGadget.h  ComplexToFloatGadget.cpp  ComplexToFloatGadget.h  DenoiseGadget.cpp  DenoiseGadget.h  ExtractGadget.cpp  ExtractGadget.h  FFTGadget.cpp  FFTGadget.h  FlagTriggerGadget.cpp  (+26 more)
gadgets/mri_noncartesian/: CMakeLists.txt  GriddingReconGadgetBase.hpp
gadgets/mri_noncartesian/config/: Generic_CPU_Gridding_Recon.xml  Generic_Spiral.xml  Generic_Spiral_Flag.xml  Generic_Spiral_SNR.xml
gadgets/plplot/: CMakeLists.txt  Generic_Cartesian_Grappa_SNR_CoilQA.xml
libmrd/: CMakeLists.txt
mri/: CMakeLists.txt  MRContext.h  MRNode.h  MRParallel.h  MRPureNode.h  MRSink.h  MRSource.h
test/: CMakeLists.txt
toolboxes/: CMakeLists.txt
toolboxes/T1/: CMakeLists.txt
toolboxes/fatwater/: CMakeLists.txt
toolboxes/plplot/: CMakeLists.txt
toolboxes/registration/demons/: CMakeLists.txt
(+122 files in other folders)
